# German-Letter

./: .gitignore  README.md  configs.json  main.py  pyproject.toml  start_server.bat  test_pythonanywhere_download.bat  update_github.bat
app/: __init__.py  healthcheck.py  latex.py  routes.py  settings.py  validation.py
cli/: __init__.py
database/: __init__.py
gui/FreeSimpleGUI/: main.py
gui/NiceGUI/: main.py
latex/: __init__.py  brief.tex  original.py
output/: letter.tex
static/: form.js  style.css
templates/: faq.html  guide.html  index.html  letter_template.jinja  markdown_guide.html  terms.html
tests/: test_healthcheck.py  test_latex_escape.py  test_routes.py  test_template_generation.py  test_validation.py
