[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brief"
version = "0.1.0"
description = "Local Flask app that generates German letters as PDF via scrlttr2."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "Flask>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
brief = "main:main"

[tool.setuptools]
packages = ["app"]
py-modules = ["main"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
